# 3d-raytracing

./: CMakeLists.txt  camera.h  common.h  cube.h  hitable.h  hitable_list.h  main.cpp  material.h  materials.h  perlin_noise.h  ray.h  sphere.h  vec3.h
